fixed alignments

--- a/styles/components/studentResource.css
+++ b/styles/components/studentResource.css
@@ -28,6 +28,7 @@
 
 .student-resource-item button {
   height: 60px;
+  padding: 14px 24px;
   display: inline-flex;
 }
 
